# DawnAide

./: .env.example  .gitignore  README.md  pyproject.toml  sidecar_backend.py
.github/workflows/: build-desktop.yml
client/desktop/: index.html  package.json  tsconfig.json
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/capabilities/: default.json
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/src/: lib.rs  main.rs
client/runtime/: config.py  main.py  requirements.txt
client/scripts/: build-desktop.sh  build-runtime.sh  dev.sh
docs/: client-architecture-solution.md  feature-planning.md  writing-scene-implementation.md
frontend/: index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  style.css
src/: __init__.py  config.py  init.py  main.py
src/agents/: base.py  team_lead.py
src/api/: kb.py  routes.py  websocket.py
src/core/: engine.py  message_bus.py  task.py  team.py
src/display/: __init__.py  hooks.py
src/llm/: __init__.py  base.py  factory.py  ollama_adapter.py  openai_adapter.py  spark_adapter.py
src/memory/: context_manager.py  memory_system.py
src/storage/: database.py
src/stores/: __init__.py  methodology_lib.py  role_registry.py  scene_registry.py  skill_registry.py
src/tools/: doc_exporter.py  file_organizer.py  file_reader.py  imessage.py  imessage_bot.py  local_client_adapter.py  local_file_tool.py  local_kb_tool.py  web_reader.py  web_search.py
src/vector/: __init__.py  (+2 more)
(+23 files in other folders)
